# hildon-input-method

./: AUTHORS  ChangeLog  MISSING  Makefile.am  README  autogen.sh  configure.ac  hildon-input-method-ui-3.0.pc.in  hildon-input-method-ui3.schemas  hildon-input-method.1  keyboard.defs  keyboard.sh
debian/: changelog  control  copyright  gbp.conf  hildon-input-method.install  hildon-input-method.launcher  libhildon-im-ui-dev.install  libhildon-im-ui3-dbg.install  libhildon-im-ui3.install  libhildon-im-ui3.postinst.in  rules
docs/: Makefile.am  hildon-input-method-docs.sgml
src/: Makefile.am  cache.c  cache.h  hildon-im-languages.c  hildon-im-languages.h  hildon-im-main.c  hildon-im-plugin.c  hildon-im-plugin.h  hildon-im-recache.c  hildon-im-settings-plugin.c  hildon-im-settings-plugin.h  hildon-im-ui.c  hildon-im-ui.h  hildon-im-widget-loader.c  hildon-im-widget-loader.h  hildon-im-xcode-keysyms.h  hildon-im-xcode.c  hildon-im-xcode.h  internal.h
